--- a/docs/consultant-contract.tex
+++ b/docs/consultant-contract.tex
@@ -7,6 +7,7 @@
 \usepackage{hyperref}
 \usepackage{helvet}
 \usepackage{graphicx}
+\usepackage{amssymb}
 \renewcommand{\familydefault}{\sfdefault}
 \setstretch{1.08}
 \titleformat{\section}{\large\bfseries\color{MidnightBlue}}{}{0em}{}
@@ -54,40 +55,31 @@ Consultant: & \underline{\hspace{6cm}} --- “Consultant”
   \end{itemize}
 \end{itemize}
 
-\section{Timeline}
-Start Date: \underline{\hspace{3cm}} \quad Target Completion: \underline{\hspace{3cm}}\\[0.5em]
-Milestones (dates + descriptions):\\[-0.5em]
-\begin{itemize}
-  \item \underline{\hspace{12cm}}
-  \item \underline{\hspace{12cm}}
-  \item \underline{\hspace{12cm}}
-\end{itemize}
-
 \section{Fees and Payment}
 Total Fee / Rate: \underline{\hspace{6cm}}\\[0.5em]
-Payment schedule (e.g., 50\% upfront, 50\% on delivery):\\[-0.5em]
-\begin{itemize}
-  \item \underline{\hspace{12cm}}
-  \item \underline{\hspace{12cm}}
-\end{itemize}
-Expenses (if any): \underline{\hspace{8cm}}
+Payment schedule (select one):\\[0.4em]
+\(\square\) 50\% upfront, 50\% on delivery\\[0.4em]
+\(\square\) Other: \underline{\hspace{6cm}}
 
 \section{Responsibilities}
-\textbf{Client provides} (access, data, feedback cadence): \underline{\hspace{10cm}}\\[0.5em]
-\textbf{Consultant provides} (design, delivery, communication): \underline{\hspace{10cm}}
+\textbf{Client provides (select/define):}
+\begin{itemize}
+  \item \(\square\) Access/credentials: \underline{\hspace{8cm}}
+  \item \(\square\) Stakeholders \& feedback cadence: \underline{\hspace{7cm}}
+  \item \(\square\) Data/assets/content: \underline{\hspace{8cm}}
+\end{itemize}
+\textbf{Consultant provides (select/define):}
+\begin{itemize}
+  \item \(\square\) Design deliverables: \underline{\hspace{8cm}}
+  \item \(\square\) Communication cadence: \underline{\hspace{7cm}}
+  \item \(\square\) Handoff/support expectations: \underline{\hspace{7cm}}
+\end{itemize}
 
 \section{Intellectual Property}
 Pre-existing IP remains with each Party. Unless agreed otherwise in writing, work product, concepts, designs, and deliverables created for Client under this Agreement will be owned by Client upon full payment. Consultant may not reuse or publish Client work product without written consent.
 
 \section{Confidentiality}
 The Parties will honor the separate Mutual NDA between them. If no NDA exists, both Parties will treat non-public information received under this Agreement as confidential and use it solely for performing the work.
-
-\section{Revisions and Approvals}
-Included revision rounds: \underline{\hspace{2cm}}\\[0.5em]
-Approval process / stakeholders: \underline{\hspace{8cm}}
-
-\section{Termination}
-Either Party may terminate with written notice of \underline{\hspace{2cm}} days. Client will pay for work performed through the termination date and any non-cancellable commitments.
 
 \section{Liability}
 Each Party limits liability to the fees paid or payable under this Agreement, except for breaches of confidentiality or IP, gross negligence, or willful misconduct.
